--- a/index.html
+++ b/index.html
@@ -55,39 +55,25 @@
 
 				<!-- Result -->
 				<Transition>
-					<div class="result" v-if="result">
-						<a
-							href="#"
-							v-if="!isFavorite"
-							class="result__toggle-favorite"
-							@click="addFavorite"
-							>Add favorite ⭐️</a
-						>
-						<a
-							href="#"
-							v-else
-							class="result__toggle-favorite"
-							@click="removeFavorite"
-							>Remove favorite ❌</a
-						>
-						<h2 class="result__name">{{ result.name }}</h2>
-						<img
-							v-bind:src="result.avatar_url"
-							:alt="result.name"
-							class="result__avatar"
-						/>
-						<p class="result__bio">{{ result.bio }}</p>
-						<br />
-						<a v-bind:href="result.html_url" target="_blank"
-							>Ir al Github</a
-						>
-					</div>
+					<app-profile
+						v-if="result"
+						:result="result"
+						:is-favorite="isFavorite"
+						@add-favorite="addFavorite"
+						@remove-favorite="removeFavorite"
+					/>
 				</Transition>
 
 				<!-- Error -->
 				<div class="result__error" v-if="error">{{ error }}</div>
 			</article>
 		</div>
+
 		<script src="js/main.js"></script>
+		<script src="js/components/AppProfile.js"></script>
+		<script>
+			//Montamos la instancia app para dar acceso a Vue a una pieza de nuestro DOM por medio de un selector, en este caso ID #app.
+			const mountedApp = app.mount("#app");
+		</script>
 	</body>
 </html>
