correcciones de estilos y funcionalidad

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
 						required
 						placeholder="Search GitHub users"
 					/>
-					<input
-						type="submit"
-						class="search__submit"
-						value="Search"
-					/>
+
+					<button type="submit" class="search__submit" value="Search">
+						Search
+					</button>
 				</form>
 
 				<!-- Result -->
